# anolis-provider-ezo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json  version-locations.txt
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: Warnings.cmake
config/: example.local.yaml
config/mixed-bus/: COMMANDS.md  README.md  anolis-runtime.mixed-baseline.windows.mock.yaml  anolis-runtime.mixed-baseline.yaml  anolis-runtime.mixed-lab.yaml  provider-bread.baseline.mock.yaml  provider-bread.lab.yaml
config/phase7/: COMMANDS.md  README.md  anolis-runtime.mixed-baseline.windows.mock.yaml  provider-ezo.baseline.mock.yaml
docs/: README.md  mixed-bus-validation-evidence-template.md  mixed-bus-validation.md
docs/contracts/: ezo-v1-draft-contracts.md
docs/cross-repo/: phase-07-mixed-bus-validation.md  runtime-ownership-validation-inputs.md
src/config/: provider_config.cpp  provider_config.hpp
src/core/: handlers.cpp  handlers.hpp  health.cpp  health.hpp  main.cpp  runtime_state.cpp  runtime_state.hpp
src/core/transport/: framed_stdio.cpp  framed_stdio.hpp
src/i2c/: bus_executor.cpp  bus_executor.hpp  ezo_i2c_bridge.cpp  ezo_i2c_bridge.hpp  session.cpp  session.hpp
src/logging/: logger.cpp  logger.hpp
tests/unit/: CMakeLists.txt  bus_executor_test.cpp  ezo_i2c_bridge_test.cpp  framed_stdio_test.cpp  handlers_test.cpp  provider_config_test.cpp
